fix(review_1): menu height on mobile

--- a/blocks/popup-menu/popup-menu.css
+++ b/blocks/popup-menu/popup-menu.css
@@ -20,8 +20,8 @@
 @media (max-width:767px) {
   .popup-menu {
     gap: 72px;
-    height: 360px;
     margin: 0;
     max-width: 320px;
+    height: 100%;
   }
 }
